<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/registerForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_anchorGravity="left|bottom">

        <LinearLayout
            android:id="@+id/registerFormLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/usernameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:maxLines="1"
        android:ems="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/passwordReg"
        android:hint="@string/prompt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:ems="10" />

        <TextView
            android:id="@+id/notifyUserRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/bt_createAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:onClick="onCreateAccountClick"
        android:text="@string/reg_create_account" />

    <Button
        android:id="@+id/bt_regBack"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        android:onClick="onGoBackClick"
        android:text="@string/reg_go_back" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
