<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_submit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/submit_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/submint_linear_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/forum_margin"
            android:layout_marginEnd="@dimen/forum_margin"
            android:orientation="vertical">

        <TextView
            android:id="@+id/submitInfoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/forum_margin"
            android:layout_marginStart="@dimen/forum_margin"
            android:text="@string/submitInfoTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/titleInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title"
                android:maxLength="50"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text"
                android:maxLength="140" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_submitPage"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:text="@string/submit"
            />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

