<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team3.teamproject.AccountActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
    android:id="@+id/myAccForm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_anchor="@+id/appBarLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_anchorGravity="left|bottom">

        <LinearLayout
            android:id="@+id/myAccFormLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reset_password"
                android:textSize="@dimen/acc_text"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/currentPassAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_old_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPassAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_reset"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:onClick="onResetPassClick"
                android:text="@string/reset" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/space_margin"
                android:layout_marginBottom="@dimen/space_margin" />

            <TextView
                android:id="@+id/deleteAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delete_account"
                android:textSize="@dimen/acc_text"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/currentPassDelAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_old_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_deleteMe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:onClick="onDeleteMeClick"
                android:text="@string/delete_me" />

            <EditText
                android:id="@+id/statusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
