<!--Login activity GUI
    Created by Petr Makarov -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="team3.teamproject.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/notifyUserLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/username_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:onClick="onLoginSignClick"
                android:text="@string/action_sign_in" />

            <Button
                android:id="@+id/register_button_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:onClick="onLoginRegisterClick"
                android:text="@string/action_register" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:textSize="@dimen/activity_login_facebook_text"
                android:paddingTop="@dimen/activity_login_facebook_padding"
                android:paddingBottom="@dimen/activity_login_facebook_padding"
                android:layout_marginStart="@dimen/activity_login_facebook_margin"
                android:layout_marginEnd="@dimen/activity_login_facebook_margin"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:textStyle="bold"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/without_login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_height"
                android:layout_marginTop="@dimen/activity_login_small_margin"
                android:onClick="onWithoutLoginClick"
                android:text="@string/action_without_login" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
